# audio-analyzer-rs

./: .gitignore  Cargo.toml  build_mobile.sh  ubrn.config.yaml
docs/superpowers/plans/: 2026-04-14-debug-visualization.md  2026-05-09-practice-engine-refactor.md
docs/superpowers/specs/: 2026-04-14-debug-visualization-design.md  2026-05-09-practice-engine-refactor-design.md
models/: README.md  normalization.json  pitch_detector.onnx  pitch_detector.onnx.data
src/: lib.rs  main.rs  pipeline.rs  practice.rs  testing.rs  traits.rs  types.rs
src/analysis/: mod.rs  onset.rs  pitch.rs  theory.rs  tuner.rs
src/audio_io/: dynamics.rs  mod.rs  output.rs  recorder.rs  stft.rs  timing.rs  tuner.rs
src/dsp/: fft.rs  mod.rs  spectrogram.rs
src/generators/: calibration.rs  metronome.rs  mod.rs  player.rs  synth.rs
src/ml/: mod.rs  pitch_detector.rs
src/practice/: buffer.rs  clock.rs  conditioner.rs  matcher.rs  metrics.rs  mod.rs  mode.rs  types.rs
src/resample/: mod.rs
training/: export.py  model.py  prepare_dataset.py  requirements.txt  train.py
training/checkpoints/: history.json  latest.pt
