[package]
name = "audio-analyzer-rs"
version = "0.1.0"
edition = "2024"

# [lib]
# name = "audio_analyzer_rs"
# crate-type = ["staticlib", "cdylib"]

[dependencies]
cpal = "0.16"                 # audio input/output host
rtrb = "0.3.2"                # realtime-safe SPSC ring buffer
rubato = "0.16.2"             # streaming resampler
rustfft = "6"                 # FFT (complex)
realfft = "3.5.0"             # real->complex convenience (optional)
crossbeam-channel = "0.5"     # for control & analysis messages
anyhow = "1.0"
thiserror = "2.0.17"
hound = "3.5.1"
tracing-subscriber = "0.3.20"
log = "0.4"
jni = "0.21.0"
