[package]
name = "audio_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "audio_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[features]
bindgen = ["uniffi/cli"]
dev-tools = ["rerun", "plotters"]

[dependencies]
log = "0.4.29"
cpal = "0.16"                                       # audio input/output host
rtrb = "0.3.3"                                      # realtime-safe SPSC ring buffer
rubato = "0.16.2"                                   # streaming resampler
rustfft = "6"                                       # FFT (complex)
realfft = "3.5.0"                                   # real->complex convenience (optional)
crossbeam-channel = "0.5"                           # for control & analysis messages
anyhow = "1.0"
thiserror = "2.0.17"
hound = "3.5.1"
tracing-subscriber = "0.3.22"
spin = "0.10.0"
symphonia = { version = "0.5", features = ["all"] }
midly = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.178"
rerun = { version = "0.30.0", optional = true }
plotters = { version = "0.3", optional = true }
parking_lot = "0.12.5"
uniffi = "0.31.0"

[package.metadata.ndk]
min_sdk_version = 26

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
